--- a/index.html
+++ b/index.html
@@ -2,67 +2,15 @@
 <html>
 <head>
     <title>Cuenta Regresiva</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-
-        #countdown {
-            font-size: 36px;
-            font-weight: bold;
-            margin-top: 50px;
-            color: black;
-        }
-    </style>
 </head>
 <body>
-    <h1>¡Falta poco!</h1>
     <p id="countdown"></p>
 
     <script>
-        // Función para formatear el tiempo
-        function formatTime(time) {
-            const days = Math.floor(time / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((time % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((time % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((time % (1000 * 60)) / 1000);
-            return `${days}d ${hours}h ${minutes}m ${seconds}s`;
-        }
-
-        // Obtener el elemento del contador
         const countdownElement = document.getElementById('countdown');
-
-        // Fecha de finalización (ajusta según tus necesidades)
         const countDownDate = new Date("October 11, 2023 00:00:00").getTime();
 
-        // Obtener el tiempo restante del almacenamiento local o calcularlo
-        let remainingTime = localStorage.getItem('remainingTime');
-
-        // Función para actualizar el contador
-        function updateTimer() {
-            if (!remainingTime) {
-                remainingTime = countDownDate - new Date().getTime();
-                localStorage.setItem('remainingTime', remainingTime);
-            } else {
-                remainingTime -= 1000;
-                localStorage.setItem('remainingTime', remainingTime);
-            }
-
-            if (remainingTime <= 0) {
-                clearInterval(x);
-                countdownElement.textContent = "¡Ya llegó!";
-            } else {
-                countdownElement.textContent = formatTime(remainingTime);
-            }
-        }
-
-        // Iniciar el intervalo para actualizar el contador cada segundo
-        const x = setInterval(updateTimer, 1000);
-
-        // Iniciar la actualización inicial
-        updateTimer();
+        // ... Resto del código
     </script>
 </body>
 </html>
