--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuenta Regresiva</title>
+    <link rel="icon" href="corazon.png" type="image/png"> <!-- Ícono del corazón -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -150,3 +151,4 @@
 
 </body>
 </html>
+
