--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuenta Regresiva</title>
+    <title>Joss&Sebas</title>
     <link rel="icon" href="corazon.png" type="image/png"> <!-- Ícono del corazón -->
     <style>
         body {
@@ -25,10 +25,15 @@
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
             z-index: 1;
+            position: relative;
         }
         h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
+        }
+        .subtitle {
+            font-size: 1.5em;
+            margin-bottom: 10px;
         }
         .countdown {
             font-size: 2em;
@@ -101,6 +106,7 @@
 <div class="heart"></div>
 
 <div class="container">
+    <div class="subtitle">Joss & Sebas</div> <!-- Texto agregado "Joss & Sebas" -->
     <h1>Falta para nuestro primer mes</h1>
     <div class="countdown">
         <div id="dias">0</div>
@@ -151,4 +157,5 @@
 
 </body>
 </html>
+
 
