--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
             animation-duration: 7s;
             animation-delay: 1s;
         }
+
+        /* Estilos para el iframe del video */
+        .video-container {
+            display: none;
+            margin-top: 20px;
+        }
+        iframe {
+            width: 560px;
+            height: 315px;
+        }
     </style>
 </head>
 <body>
@@ -105,15 +115,20 @@
 <div class="heart"></div>
 <div class="heart"></div>
 
-<div class="container">
+<div class="container" id="countdownContainer">
     <div class="subtitle">Joss & Sebas</div> <!-- Texto agregado "Joss & Sebas" -->
     <h1>Falta para nuestro primer mes</h1>
     <div class="countdown">
-        <div id="dias">0</div>
-        <div id="horas">0</div>
-        <div id="minutos">0</div>
-        <div id="segundos">0</div>
+        <div id="dias"></div>
+        <div id="horas"></div>
+        <div id="minutos"></div>
+        <div id="segundos"></div>
     </div>
+</div>
+
+<!-- Contenedor del video de YouTube -->
+<div class="video-container" id="videoContainer">
+    <iframe id="videoIframe" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 
 <script>
@@ -141,15 +156,22 @@
         const segundos = Math.floor((diferencia % (1000 * 60)) / 1000);
 
         // Mostrar el resultado en los respectivos elementos HTML
-        document.getElementById("dias").innerHTML = dias + " Días";
-        document.getElementById("horas").innerHTML = horas + " Horas";
-        document.getElementById("minutos").innerHTML = minutos + " Minutos";
+        document.getElementById("dias").innerHTML = dias > 0 ? dias + " Días" : "";
+        document.getElementById("horas").innerHTML = horas > 0 ? horas + " Horas" : "";
+        document.getElementById("minutos").innerHTML = minutos > 0 ? minutos + " Minutos" : "";
         document.getElementById("segundos").innerHTML = segundos + " Segundos";
 
-        // Si la cuenta ha llegado a 0, detener el intervalo y borrar la fecha de localStorage
-        if (diferencia < 0) {
+        // Si la cuenta ha llegado a 0, detener el intervalo y mostrar el video
+        if (diferencia <= 0) {
             clearInterval(intervalo);
-            document.querySelector('.countdown').innerHTML = "¡Tiempo terminado!";
+            document.getElementById("countdownContainer").style.display = "none"; // Ocultar la cuenta regresiva
+            document.getElementById("videoContainer").style.display = "block"; // Mostrar el video
+
+            // Reproducir el video automáticamente agregando 'autoplay=1'
+            const videoIframe = document.getElementById("videoIframe");
+            videoIframe.src = "https://www.youtube.com/embed/93puMDhX7xs?autoplay=1";
+
+            // Eliminar la fecha límite del almacenamiento local
             localStorage.removeItem('fechaLimite');
         }
     }, 1000);
@@ -157,5 +179,3 @@
 
 </body>
 </html>
-
-
