--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joss & Sebas</title>
+    <link rel="icon" href="corazon.png" type="image/png"> <!-- Ícono del corazón -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #ffcccc; /* Fondo rojo más bajo */
+            position: relative;
+            overflow: hidden;
+        }
+        .container {
+            text-align: center;
+            background-color: white; /* Fondo del contenedor blanco */
+            color: black; /* Texto negro */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            z-index: 1;
+            position: relative;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+        .subtitle {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .countdown {
+            font-size: 2em;
+        }
+        .countdown div {
+            margin: 10px 0;
+        }
+        /* Estilos para los corazones */
+        .heart {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: red;
+            transform: rotate(-45deg);
+            top: 100%;
+            animation: float 6s infinite;
+            z-index: 0;
+        }
+        .heart::before,
+        .heart::after {
+            content: "";
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: red;
+            border-radius: 50%;
+        }
+        .heart::before {
+            top: -25px;
+            left: 0;
+        }
+        .heart::after {
+            left: 25px;
+            top: 0;
+        }
+        /* Animación de los corazones flotantes */
+        @keyframes float {
+            0% {
+                transform: translateY(0) rotate(-45deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-100vh) rotate(-45deg);
+                opacity: 0;
+            }
+        }
+        /* Diferentes tamaños y posiciones de los corazones */
+        .heart:nth-child(2) {
+            left: 20%;
+            animation-duration: 8s;
+        }
+        .heart:nth-child(3) {
+            left: 50%;
+            animation-duration: 10s;
+            animation-delay: 2s;
+        }
+        .heart:nth-child(4) {
+            left: 80%;
+            animation-duration: 7s;
+            animation-delay: 1s;
+        }
+
+        /* Estilos para el iframe del video */
+        .video-container {
+            display: none;
+            margin-top: 20px;
+        }
+        iframe {
+            width: 560px;
+            height: 315px;
+        }
+    </style>
+</head>
+<body>
+
+<!-- Corazones flotantes -->
+<div class="heart"></div>
+<div class="heart"></div>
+<div class="heart"></div>
+<div class="heart"></div>
+
+<div class="container" id="countdownContainer">
+    <div class="subtitle">Joss & Sebas</div> <!-- Texto agregado "Joss & Sebas" -->
+    <h1>Falta para nuestro primer mes</h1>
+    <div class="countdown">
+        <div id="minutos"></div>
+        <div id="segundos"></div>
+    </div>
+</div>
+
+<!-- Contenedor del video de YouTube -->
+<div class="video-container" id="videoContainer">
+    <iframe id="videoIframe" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<script>
+    // Duración de la cuenta regresiva en segundos (7 minutos)
+    const countdownDuration = 7 * 60; // 7 minutos en segundos
+
+    // Calcular la fecha límite (ahora + 7 minutos)
+    const fechaLimite = new Date().getTime() + (countdownDuration * 1000);
+
+    // Guardar la fecha límite en localStorage
+    localStorage.setItem('fechaLimite', fechaLimite);
+
+    // Convertir la fecha de límite a número (milisegundos)
+    const fechaLimiteNum = parseInt(fechaLimite);
+
+    // Actualizar la cuenta regresiva cada segundo
+    const intervalo = setInterval(() => {
+        const ahora = new Date().getTime();
+        const diferencia = fechaLimiteNum - ahora;
+
+        // Cálculo de minutos y segundos
+        const minutos = Math.floor((diferencia % (1000 * 60 * 60)) / (1000 * 60));
+        const segundos = Math.floor((diferencia % (1000 * 60)) / 1000);
+
+        // Mostrar el resultado en los respectivos elementos HTML
+        document.getElementById("minutos").innerHTML = minutos + " Minutos";
+        document.getElementById("segundos").innerHTML = segundos + " Segundos";
+
+        // Si la cuenta ha llegado a 0, detener el intervalo y mostrar el video
+        if (diferencia <= 0) {
+            clearInterval(intervalo);
+            document.getElementById("countdownContainer").style.display = "none"; // Ocultar la cuenta regresiva
+            document.getElementById("videoContainer").style.display = "block"; // Mostrar el video
+
+            // Reproducir el video automáticamente agregando 'autoplay=1'
+            const videoIframe = document.getElementById("videoIframe");
+            videoIframe.src = "https://www.youtube.com/embed/G-lI_p0pNiU?autoplay=1";
+
+            // Eliminar la fecha límite del almacenamiento local
+            localStorage.removeItem('fechaLimite');
+        }
+    }, 1000);
+</script>
+
+</body>
+</html>
 
