--- a/index.html
+++ b/index.html
@@ -35,12 +35,6 @@
             font-size: 1.5em;
             margin-bottom: 10px;
         }
-        .countdown {
-            font-size: 2em;
-        }
-        .countdown div {
-            margin: 10px 0;
-        }
         /* Estilos para los corazones */
         .heart {
             position: absolute;
@@ -98,7 +92,6 @@
 
         /* Estilos para el iframe del video */
         .video-container {
-            display: none;
             margin-top: 20px;
         }
         iframe {
@@ -117,62 +110,13 @@
 
 <div class="container" id="countdownContainer">
     <div class="subtitle">Joss & Sebas</div> <!-- Texto agregado "Joss & Sebas" -->
-    <h1>Falta para nuestro primer mes</h1>
-    <div class="countdown">
-        <div id="minutos"></div>
-        <div id="segundos"></div>
-    </div>
+    <h1>¡Mira nuestro video especial!</h1>
 </div>
 
 <!-- Contenedor del video de YouTube -->
 <div class="video-container" id="videoContainer">
-    <iframe id="videoIframe" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe id="videoIframe" src="https://www.youtube.com/embed/G-lI_p0pNiU?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
-
-<script>
-    // Duración de la cuenta regresiva en segundos (3 minutos)
-    const countdownDuration = 3 * 60; // 3 minutos en segundos
-
-    // Verificar si ya hay una fecha límite guardada en localStorage
-    let fechaLimite = localStorage.getItem('fechaLimite');
-
-    // Si no existe, calcularla y guardarla en localStorage
-    if (!fechaLimite) {
-        fechaLimite = new Date().getTime() + (countdownDuration * 1000); // 3 minutos en milisegundos
-        localStorage.setItem('fechaLimite', fechaLimite);
-    }
-
-    // Convertir la fecha de límite a número (milisegundos)
-    const fechaLimiteNum = parseInt(fechaLimite);
-
-    // Actualizar la cuenta regresiva cada segundo
-    const intervalo = setInterval(() => {
-        const ahora = new Date().getTime();
-        const diferencia = fechaLimiteNum - ahora;
-
-        // Cálculo de minutos y segundos
-        const minutos = Math.floor((diferencia % (1000 * 60 * 60)) / (1000 * 60));
-        const segundos = Math.floor((diferencia % (1000 * 60)) / 1000);
-
-        // Mostrar el resultado en los respectivos elementos HTML
-        document.getElementById("minutos").innerHTML = minutos + " Minutos";
-        document.getElementById("segundos").innerHTML = segundos + " Segundos";
-
-        // Si la cuenta ha llegado a 0, detener el intervalo y mostrar el video
-        if (diferencia <= 0) {
-            clearInterval(intervalo);
-            document.getElementById("countdownContainer").style.display = "none"; // Ocultar la cuenta regresiva
-            document.getElementById("videoContainer").style.display = "block"; // Mostrar el video
-
-            // Reproducir el video automáticamente agregando 'autoplay=1'
-            const videoIframe = document.getElementById("videoIframe");
-            videoIframe.src = "https://www.youtube.com/embed/G-lI_p0pNiU?autoplay=1";
-
-            // Eliminar la fecha límite del almacenamiento local
-            localStorage.removeItem('fechaLimite');
-        }
-    }, 1000);
-</script>
 
 </body>
 </html>
