--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
             overflow: hidden;
         }
         .container {
-            text-align: center;
-            background-color: white; /* Fondo del contenedor blanco */
-            color: black; /* Texto negro */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-            z-index: 1;
             position: relative;
+            width: 560px;
+            height: 315px;
         }
         h1 {
             font-size: 2.5em;
-            margin-bottom: 20px;
+            color: white;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2;
+            margin: 0;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+            text-align: center;
+            width: 100%;
         }
-        .subtitle {
-            font-size: 1.5em;
-            margin-bottom: 10px;
+        iframe {
+            width: 100%;
+            height: 100%;
+            z-index: 1;
         }
         /* Estilos para los corazones */
         .heart {
@@ -89,15 +95,6 @@
             animation-duration: 7s;
             animation-delay: 1s;
         }
-
-        /* Estilos para el iframe del video */
-        .video-container {
-            margin-top: 20px;
-        }
-        iframe {
-            width: 560px;
-            height: 315px;
-        }
     </style>
 </head>
 <body>
@@ -108,13 +105,8 @@
 <div class="heart"></div>
 <div class="heart"></div>
 
-<div class="container" id="countdownContainer">
-    <div class="subtitle">Joss & Sebas</div> <!-- Texto agregado "Joss & Sebas" -->
-    <h1>¡Mira nuestro video especial!</h1>
-</div>
-
-<!-- Contenedor del video de YouTube -->
-<div class="video-container" id="videoContainer">
+<div class="container">
+    <h1>¡Feliz primer mes mi Joss!</h1> <!-- Título sobre el video -->
     <iframe id="videoIframe" src="https://www.youtube.com/embed/G-lI_p0pNiU?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 
