--- a/index.html
+++ b/index.html
@@ -1,55 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Cuenta Regresiva</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
+    body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #F00; /* Rojo */
+}
 
-        #countdown-container {
-            position: relative;
-            width: 300px;
-            margin: 0 auto;
-        }
+.container {
+    text-align: center;
+    color: #fff;
+    position: relative;
+}
 
-        #countdown {
-            font-size: 36px;
-            font-weight: bold;
-            color: #333;
-        }
+.title {
+    font-family: 'Pacifico', cursive; /* O cualquier fuente romántica */
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
 
-        #title {
-            position: absolute;
-            top: -50px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 24px;
-            color: #777;
-        }
-    </style>
-</head>
-<body>
-    <div id="countdown-container">
-        <h2 id="title">Felices 2 meses mi amor! Y por lo que se viene...</h2>
-        <p id="countdown"></p>
-    </div>
+.countdown {
+    font-size: 2rem;
+}
 
-    <script>
-        // Función para formatear el tiempo
-        function formatTime(time) {
-            // ... (tu función de formato aquí)
-        }
-
-        // Obtener el elemento del contador
-        const countdownElement = document.getElementById('countdown');
-
-        // Fecha de finalización (ajusta según tus necesidades)
-        const countDownDate = new Date("October 11, 2023 00:00:00").getTime();
-
-        // ... (resto del código JavaScript)
-    </script>
-</body>
-</html>
+#heart-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
