--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
-    body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #F00; /* Rojo */
-}
-
-.container {
-    text-align: center;
-    color: #fff;
-    position: relative;
-}
-
-.title {
-    font-family: 'Pacifico', cursive; /* O cualquier fuente romántica */
-    font-size: 3rem;
-    margin-bottom: 2rem;
-}
-
-.countdown {
-    font-size: 2rem;
-}
-
-#heart-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Cuenta Regresiva Romántica</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <canvas id="heart-canvas"></canvas>
+    <div class="container">
+        <h1 class="title">Felices 2 meses mi amor! Y por lo que se viene...</h1>
+        <div class="countdown">
+            <p id="countdown-timer"></p>
+        </div>
+        <a href="https://www.youtube.com/watch?v=yXgrO1nH4Gk&list=RDtjbDTVDdQCk&index=3" target="_blank">Ver nuestro video</a>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/confetti-js@1.0.1/dist/confetti.min.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
