--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html>
 <head>
     <title>Cuenta Regresiva Romántica</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Estilos CSS */
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #F00; /* Rojo intenso */
+            font-family: 'Pacifico', cursive; /* Fuente romántica */
+        }
+
+        /* Resto de los estilos CSS */
+        /* ... */
+    </style>
 </head>
 <body>
     <canvas id="heart-canvas"></canvas>
@@ -11,9 +23,11 @@
         <div class="countdown">
             <p id="countdown-timer"></p>
         </div>
-        <a href="https://www.youtube.com/watch?v=yXgrO1nH4Gk&list=RDtjbDTVDdQCk&index=3" target="_blank">Ver nuestro video</a>
+        <a href="https://www.youtube.com/watch/v=yXgrO1nH4Gk&list=RDtjbDTVDdQCk&index=3" target="_blank">Ver nuestro video</a>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/confetti-js@1.0.1/dist/confetti.min.js"></script>
-    <script src="script.js"></script>
+    <script>
+        // Código JavaScript
+        // ... (el mismo código JavaScript que tenías antes)
+    </script>
 </body>
 </html>
