--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cuenta Regresiva Romántica</title>
+    <title>Mi GIF Romántico</title>
     <style>
-        /* Estilos CSS */
         body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            background-color: #F00; /* Rojo intenso */
-            font-family: 'Pacifico', cursive; /* Fuente romántica */
+            background-color: #990000; /* Rojo más oscuro */
+            font-family: 'Pacifico', cursive;
+            text-align: center;
         }
-
-        /* Resto de los estilos CSS */
-        /* ... */
+        .container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        h1 {
+            color: white;
+            font-size: 4rem;
+        }
     </style>
 </head>
 <body>
-    <canvas id="heart-canvas"></canvas>
     <div class="container">
-        <h1 class="title">Felices 2 meses mi amor! Y por lo que se viene...</h1>
-        <div class="countdown">
-            <p id="countdown-timer"></p>
-        </div>
-        <a href="https://www.youtube.com/watch/v=yXgrO1nH4Gk&list=RDtjbDTVDdQCk&index=3" target="_blank">Ver nuestro video</a>
+        <h1>Felices 2 meses mi amor!</h1>
     </div>
-    <script>
-        // Código JavaScript
-        // ... (el mismo código JavaScript que tenías antes)
-    </script>
 </body>
 </html>
