--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi GIF Romántico</title>
+    <title>Corazones que caen</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: #990000; /* Rojo más oscuro */
-            font-family: 'Pacifico', cursive;
-            text-align: center;
+            background-color: #F28B8B; /* Un tono de rojo rosado */
+            overflow: hidden;
         }
-        .container {
+        .heart {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            width: 20px;
+            height: 20px;
+            background-color: #FF0000; /* Color de los corazones */
+            border-radius: 50%;
+            animation: fall 2s infinite linear;
         }
-        h1 {
-            color: white;
-            font-size: 4rem;
+        @keyframes fall {
+            0% {
+                transform: translateY(-100%);
+            }
+            100% {
+                transform: translateY(100%);
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Felices 2 meses mi amor!</h1>
-    </div>
+    <div id="heart-container"></div>
+    <script>
+        const heartContainer = document.getElementById('heart-container');
+
+        setInterval(() => {
+            const heart = document.createElement('div');
+            heart.classList.add('heart');
+            heart.style.left = Math.random() * 100 + '%';
+            heartContainer.appendChild(heart);
+            setTimeout(() => {
+                heart.remove();
+            }, 2000);
+        }, 100);
+    </script>
 </body>
 </html>
